[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Oswald-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.705882 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="."]
margin_left = 368.0
margin_top = 139.0
margin_right = 651.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 402.0
margin_top = 229.0
margin_right = 608.0
margin_bottom = 403.0
custom_constants/separation = 10

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_right = 206.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Resume Game"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 206.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 206.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 4 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
